- Implementada clase Partido para la gestión de eventos - Añadida funcionalidad para la creación de eventos a través de un Dialog - Creada actividad para visualizar eventos publicados (actualmente solo muestra el id del evento) - Implementado el JavaDoc de las clases principales de la aplicación - Finalizado los tests de los métodos de la clase Database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.SportTogether">
-        <activity android:name=".MatchesMainActivity"></activity>
-        <activity android:name=".FirstLoginActivity" />
-        <activity android:name=".SingUpActivity" />
-        <activity android:name=".LogInActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.activities.MatchesMainActivity" />
+        <activity android:name=".ui.activities.FirstLoginActivity" />
+        <activity android:name=".ui.activities.SingUpActivity" />
+        <activity android:name=".ui.activities.LogInActivity" />
+        <activity android:name=".ui.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
