--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,12 @@ dependencies {
     implementation 'org.sqldroid:sqldroid:1.0.3'
     implementation 'androidx.viewpager:viewpager:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.nshmura:recyclertablayout:1.5.0'
 
 }
